chore(src): Maintenance updates - Added 5 new files - Modified 50 existing files - Deleted 2 files - Updated configuration files (.bandit, .flake8, .gitignore, etc.) - Adjusted CI/CD workflow (.github/workflows/ci.yml)

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -33,7 +33,7 @@ repos:
       - id: debug-statements
 
   - repo: https://github.com/PyCQA/bandit
-    rev: 1.7.5
+    rev: 1.7.10
     hooks:
       - id: bandit
-        args: ["-c", "pyproject.toml"]
+        args: ["-c", ".bandit"]
